--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -10,50 +10,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_divide_line"
-        android:orientation="horizontal"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp">
+        android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/dialog_integer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="16dp"
-            android:text="0"
-            android:textSize="28sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=","
-            android:textSize="28sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="5dp"
-            android:text="00"
-            android:textSize="28sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="грн."
-            android:textSize="24sp" />
+            android:text="@string/zero"
+            android:textSize="@dimen/dialog_summ_tv_text_size" />
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:id="@+id/dialog_erase_rl"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_centerHorizontal="true">
+            android:background="@drawable/dialog_number_selector">
 
             <ImageView
+                android:id="@+id/dialog_erase_iv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_centerHorizontal="true"
-                android:layout_centerInParent="true"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_centerVertical="true"
+                android:paddingEnd="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingStart="16dp"
                 android:src="@drawable/ic_content_backspace" />
         </RelativeLayout>
 
@@ -65,132 +48,83 @@
 
         <TableRow>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:text="1"
-                android:textSize="24sp" />
+            <Button
+                android:id="@+id/dialog_one"
+                style="@style/dialog_numbers_btn_style"
+                android:tag="1"
+                android:text="@string/one" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:text="2"
-                android:textSize="24sp" />
+            <Button
+                android:id="@+id/dialog_two"
+                style="@style/dialog_numbers_btn_style"
+                android:tag="2"
+                android:text="@string/two" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:text="3"
-                android:textSize="24sp" />
+            <Button
+                android:id="@+id/dialog_three"
+                style="@style/dialog_numbers_btn_style"
+                android:tag="3"
+                android:text="@string/three" />
         </TableRow>
 
         <TableRow>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:text="4"
-                android:textSize="24sp" />
+            <Button
+                android:id="@+id/dialog_four"
+                style="@style/dialog_numbers_btn_style"
+                android:tag="4"
+                android:text="@string/four" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:text="5"
-                android:textSize="24sp" />
+            <Button
+                android:id="@+id/dialog_five"
+                style="@style/dialog_numbers_btn_style"
+                android:tag="5"
+                android:text="@string/five" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:text="6"
-                android:textSize="24sp" />
+            <Button
+                android:id="@+id/dialog_six"
+                style="@style/dialog_numbers_btn_style"
+                android:tag="6"
+                android:text="@string/six" />
         </TableRow>
 
         <TableRow>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:text="7"
-                android:textSize="24sp" />
+            <Button
+                android:id="@+id/dialog_seven"
+                style="@style/dialog_numbers_btn_style"
+                android:tag="7"
+                android:text="@string/seven" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:text="8"
-                android:textSize="24sp" />
+            <Button
+                android:id="@+id/dialog_eight"
+                style="@style/dialog_numbers_btn_style"
+                android:tag="8"
+                android:text="@string/eight" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:text="9"
-                android:textSize="24sp" />
+            <Button
+                android:id="@+id/dialog_nine"
+                style="@style/dialog_numbers_btn_style"
+                android:tag="9"
+                android:text="@string/nine" />
         </TableRow>
 
         <TableRow android:background="@drawable/background_divide_line">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:text=","
-                android:textSize="24sp" />
+            <Button
+                android:id="@+id/dialog_comma"
+                style="@style/dialog_numbers_btn_style"
+                android:text="@string/comma" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:text="0"
-                android:textSize="24sp" />
+            <Button
+                android:id="@+id/dialog_zero"
+                style="@style/dialog_numbers_btn_style"
+                android:tag="0"
+                android:text="0" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <Space
                 android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:text=""
-                android:textSize="24sp" />
+                android:gravity="center_horizontal" />
         </TableRow>
     </TableLayout>
 
@@ -207,7 +141,7 @@
             android:layout_marginRight="8dp"
             android:layout_toLeftOf="@+id/dialog_ok"
             android:layout_toStartOf="@+id/dialog_ok"
-            android:text="CANCEL" />
+            android:text="@string/CANCEL" />
 
         <Button
             android:id="@+id/dialog_ok"
@@ -220,7 +154,7 @@
             android:layout_marginRight="16dp"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:text="OK" />
+            android:text="@string/OK" />
 
     </RelativeLayout>
 </LinearLayout>
